--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -99,6 +99,22 @@
   max-width: 200px;
   font-size: 11px;
   font-weight: 300;
-  border-radius: 8px 8px 0 px 8px;
+  border-radius: 8px 8px 0px 8px;
   margin-bottom: 30px;
+}
+
+.r-msg .msg {
+  border-radius: 8px 8px 8px 0px;
+}
+
+.s-msg div,
+.r-msg div {
+  text-align: center;
+  font-size: 9px;
+}
+
+.msg-img {
+  max-width: 230px;
+  margin-bottom: 30px;
+  border-radius: 10px;
 }
